@@ -19,6 +19,7 @@ SEXP dgeMatrix_matrix_solve(SEXP a, SEXP b, SEXP classed);
 SEXP dgeMatrix_matrix_mm(SEXP a, SEXP b, SEXP classed, SEXP right);
 SEXP dgeMatrix_svd(SEXP x, SEXP nu, SEXP nv);
 SEXP dgeMatrix_exp(SEXP x);
+SEXP dgeMatrix_colsums(SEXP x, SEXP naRmP, SEXP cols, SEXP mean);
 
 /* DGESDD - compute the singular value decomposition (SVD); of a   */
 /* real M-by-N matrix A, optionally computing the left and/or      */
